use github api with base64 encoded data to enable sending

--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -7,6 +7,7 @@
   <link rel="shortcut icon" href="/favicons/favicon.ico">
 
   <script src="/script/polyfills.js"></script>
+  <script src="/script/base64.js"></script>
   <script src="/script/db.js"></script>
   <script src="/script/request.js"></script>
   <!--script src="/script/results.js"></script-->
