--- a/calendar/input.html
+++ b/calendar/input.html
@@ -7,6 +7,7 @@
   <link rel="shortcut icon" href="/favicons/favicon.ico">
 
   <script src="/script/polyfills.js"></script>
+  <script src="/script/base64.js"></script>
   <script src="/script/db.js"></script>
   <script src="/script/request.js"></script>
   <!--script src="/script/schedule.js"></script-->
@@ -204,6 +205,7 @@ var _year = 0,
     _curItem = '',
 
     _data = {},
+    _sha = {},
     _dirty = [],
     _tpl = {},
 
@@ -290,6 +292,7 @@ function _showOV2() {
 // query extra dates from github
 function _loadDates() {
   var y = '' + _year,
+      // fixUtf8,
       handlerXDates, handlerError;
 
   // reset
@@ -303,18 +306,56 @@ function _loadDates() {
   // else: load new info
   } else {
 
+    // // from: https://gist.github.com/Nijikokun/5192472
+    // fixUtf8 = function(str) {
+    //   var fixed = '',
+    //       index = 0,
+    //       charCode = 0;
+    //
+    //   while (index < str.length) {
+    //     charCode = str.charCodeAt(index);
+    //
+    //     if (charCode < 128) {
+    //       fixed += String.fromCharCode(charCode);
+    //       ++index;
+    //     } else if ((charCode > 191) && (charCode < 224)) {
+    //       fixed += String.fromCharCode(((charCode & 31) << 6) | (str.charCodeAt(index + 1) & 63));
+    //       index += 2;
+    //     } else {
+    //       fixed += String.fromCharCode(((charCode & 15) << 12)
+    //         | ((str.charCodeAt(index + 1) & 63) << 6)
+    //         | (str.charCodeAt(index + 2) & 63));
+    //       index += 3;
+    //     }
+    //   }
+    //
+    //   return fixed;
+    // };
+
     handlerXDates = function(data) {
+      var dates0;
+
       log('X-dates have been loaded for ' + y + '.');
       if (data) {
         try {
-          _data[y] = JSON.parse(data);
+          dates0 = JSON.parse(data);
+          if (dates0 && dates0.sha && dates0.content) {
+            // _data[y] = JSON.parse(fixUtf8(atob(dates0.content)));
+            _data[y] = JSON.parse(base64.decode(dates0.content));
+            _sha[y] = dates0.sha;
+          } else {
+            log('------------------------------------------------------');
+            log('Invalid data for x-dates of ' + _year + '!');
+            log('------------------------------------------------------');
+          }
         } catch (x) {
           log('------------------------------------------------------');
-          log('Cannot parse x-dates!');
+          log('Cannot parse x-dates of ' + _year + '!');
           log(x);
           log('------------------------------------------------------');
         }
       }
+
       _updateList();
     };
 
