--- a/schedule.html
+++ b/schedule.html
@@ -21,6 +21,7 @@ b.team {
 }
   </style>
   <script src="/script/polyfills.js"></script>
+  <script src="/script/base64.js"></script>
   <script src="/script/db.js"></script>
   <script src="/script/request.js"></script>
   <script src="/script/schedule.js"></script>
