--- a/_work/svg/container.html
+++ b/_work/svg/container.html
@@ -9,26 +9,177 @@
   <script src="/script/animator.js"></script>
   <script src="/script/svgviewer.js"></script>
   <style>
+body {
+  overflow: hidden;
+}
+
+.container {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+  font-family: Arial, Helvetica, sans-serif;
+}
+
+#header {
+  box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 50px;
+  padding: 10px;
+
+  background-color: lightblue;
+  font-size: 30px;
+  font-weight: bold;
+}
+#header > a {
+  position: absolute;
+  top: 6px;
+  border: 4px solid whitesmoke;
+  height: 30px;
+}
+#header > .title {
+  position: absolute;
+  left: 120px;
+  right: 120px;
+  height: 26px;
+  text-align: left;
+  font-size: 20px;
+  padding-top: 4px;
+  background-color: lightblue;
+}
+
+#footer {
+  box-sizing: border-box;
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  height: 22px;
+  padding: 2px 5px 0px 10px;
+
+  background-color: lightblue;
+  font-size: 15px;
+  font-weight: bold;
+  text-align: left;
+}
+#footer > div {
+  box-sizing: border-box;
+  position: absolute;
+  top: 0;
+  right: 0;
+  height: 22px;
+  padding: 2px 10px 0px 5px;
+
+  background-color: inherit;
+  font-size: 15px;
+  font-weight: bold;
+}
+
 div.canvas_svg {
-    position: absolute;
-    left: 0;
-    top: 0;
-    width: 100%;
-    min-width: 100px;
-    height: 100%;
-    background-color: #d3d3d3;
+  position: absolute;
+  left: 0;
+  top: 50px;
+  width: 100%;
+  min-width: 100px;
+  bottom: 22px;
+  background-color: #d3d3d3;
 }
 div.canvas_svg > svg {
-    height: 100%;
-    max-width: 100%;
-    display: block;
-    margin: auto;
+  height: 100%;
+  max-width: 100%;
+  display: block;
+  margin: auto;
+}
+
+#svgmenu {
+  background-color: transparent;
 }
   </style>
+  <script>
+function init() {
+  // block default context menu
+  window.addEventListener('contextmenu', function(event) {
+    event.stopPropagation();
+    event.preventDefault();
+    return false;
+  });
+
+  // backlinks
+  var elem, i, name, parts, pos,
+      elemsLnks = document.querySelectorAll('#header > a');
+  if (elemsLnks) {
+    for (i = 0; i < elemsLnks.length; ++i) {
+      elem = elemsLnks[i];
+
+      parts = location.pathname.split('/');
+      if (parts && parts.length) {
+        name = parts[parts.length - 1];
+        pos = name.indexOf('.');
+        if (pos > -1) {
+          name = name.substr(0, pos);
+        }
+        if (name) {
+          name = encodeURIComponent(name.toLowerCase());
+          elem.setAttribute(
+            'href',
+            elem.getAttribute('href') + '#anchor_' + name
+          );
+        }
+      }
+    }
+  }
+
+  // get scripts and evaluate them
+  var elemTpl = document.querySelector('#svg_script');
+  if (elemTpl) {
+    eval(elemTpl.innerText);
+  }
+
+  // check for menu, if any: init it
+  var elemCanvas = document.querySelector('div.canvas_svg'),
+      elemMenu = document.querySelector('#svgmenu');
+  if (elemCanvas && elemMenu) {
+    svgviewer.menuHandler = menuHandler;
+    svgviewer.initContextMenu(elemCanvas);
+  }
+}
+
+function menuHandler(fullkey, state) {
+  // console.log('Menuitem: ' + fullkey + ' -> ' + state);
+  svgviewer.setOption(fullkey, state);
+}
+
+function linkback(elem) {
+  // var name, pos,
+  //     parts = location.pathname.split('/');
+  // if (parts && parts.length) {
+  //   name = parts[parts.length - 1];
+  //   pos = name.indexOf('.');
+  //   if (pos > -1) {
+  //     name = name.substr(0, pos);
+  //   }
+  //   if (name) {
+  //     name = encodeURIComponent(name.toLowerCase());
+  //     window.location.href = window.location.protocol + '//'
+  //         + window.location.host + elem.getAttribute('href')
+  //         + '#anchor_' + name;
+  //
+  //     return false;
+  //   }
+  // }
+}
+  </script>
 </head>
-<body>
-<div class="canvas_svg">
-{{svg}}
+<body onload="init();">
+<div class="container">
+<div id="header">{include{header}}</div>
+<div class="canvas_svg">{{svg}}</div>
+<div id="footer">{include{footer}}</div>
 </div>
 </body>
 </html>
