Blockinfo - Verlinkung neu

--- a/uld/grundlagen3/blockinfo/block.html
+++ b/uld/grundlagen3/blockinfo/block.html
@@ -6,6 +6,9 @@
   <link rel="stylesheet" href="/styles.css">
   <link rel="shortcut icon" href="/favicons/favicon.ico">
   <style>
+body {
+  margin: 60px 0 0 0;
+}
 h1 {
   padding: 10px;
   margin-bottom: 20px;
@@ -80,6 +83,13 @@ div.idee {
   </style>
 </head>
 <body>
+
+  <div id="header">
+  <a href="/uld/grundlagen3/#anchor_block" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
+  <div class="title">Infos zum Block</div>
+  <a href="/uld/grundlagen3/#anchor_block" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
+  </div>
+
   <table cellspacing="0" cellpadding="0">
     <tr>
       <td colspan="2">
