backlinks for statistics and basics

--- a/uld/grundlagen/index.html
+++ b/uld/grundlagen/index.html
@@ -4,9 +4,20 @@
   <meta charset="UTF-8">
   <title>Brückl hotvolleys</title>
   <link rel="stylesheet" href="/styles.css">
+  <style>
+body {
+  margin: 60px 0 0 0;
+}
+  </style>
   <link rel="shortcut icon" href="/favicons/favicon.ico">
 </head>
 <body>
+
+  <div id="header">
+  <a href="/ov.html#anchor_grundlagen_br4" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
+  <div class="title">Grundlagen</div>
+  <a href="/ov.html#anchor_grundlagen_br4" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
+  </div>
 
   <h1 class="tactics">Grundlagen</h1>
   <table class="tactics" align="center" cellspacing="0" cellpadding="10">
