--- a/uld/grundlagen3/index.html
+++ b/uld/grundlagen3/index.html
@@ -60,9 +60,9 @@ function init() {
 <body onload="init();">
 
   <div id="header">
-  <a href="/ov.html" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
+  <a href="/ov.html#anchor_grundlagen_br3" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
   <div class="title">Grundlagen</div>
-  <a href="/ov.html" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
+  <a href="/ov.html#anchor_grundlagen_br3" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
   </div>
 
   <h1 id="ann" class="tactics expandable">Annahme</h1>
