--- a/_work/statistics.html
+++ b/_work/statistics.html
@@ -6,6 +6,10 @@
   <link rel="stylesheet" href="/styles.css">
   <link rel="stylesheet" href="/elements/expander/styles.css">
   <style>
+body {
+  margin: 60px 0 0 0;
+}
+
 h4, h5 {
   text-align: left;
 }
@@ -178,6 +182,11 @@ function init() {
   </script>
 </head>
 <body onload="init();">
+<div id="header">
+<a href="/ov.html#anchor_statistics_br3" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
+<div class="title">Grundlagen</div>
+<a href="/ov.html#anchor_statistics_br3" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
+</div>
 {{matches}}
 </body>
 </html>
