--- a/u11/index.html
+++ b/u11/index.html
@@ -5,8 +5,32 @@
   <title>Brückl hotvolleys</title>
   <link rel="stylesheet" href="/styles.css">
   <link rel="shortcut icon" href="/favicons/favicon.ico">
+  <style>
+body {
+  margin: 60px 0 0 0;
+}
+  </style>
+  <script>
+function init() {
+  if (location.hash.toLowerCase() === '#u10') {
+    var i,
+        lnks = document.querySelectorAll('div#header > a');
+    if (lnks) {
+      for (i = 0; i < lnks.length; ++i) {
+        lnks[i].setAttribute('href', lnks[i].getAttribute('href').replace('_u11', '_u10'));
+      }
+    }
+  }
+}
+  </script>
 </head>
-<body>
+<body onload="init();">
+  <div id="header">
+  <a href="/ov.html#anchor_grundlagen_u11" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
+  <div class="title">Grundlagen</div>
+  <a href="/ov.html#anchor_grundlagen_u11" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
+  </div>
+
   <h1 class="tactics">Annahme und Verteidigung</h1>
   <table class="tactics" align="center" cellspacing="0" cellpadding="10">
     <tr>
