back links for results, standings, and schedules

--- a/standings.html
+++ b/standings.html
@@ -7,11 +7,18 @@
   <link rel="shortcut icon" href="/favicons/favicon.ico">
   <style>
 pre#content {
+  position: absolute;
+  top: 60px;
+  left: 0;
+  width: 100%;
+  bottom: 0;
+  overflow: auto;
   font-family: monospace;
   text-align: left;
   font-size: 16px;
   padding: 16px;
   line-height: 111%;
+  box-sizing: border-box;
 }
 b.team {
   font-family: monospace;
@@ -24,8 +31,28 @@ b.team {
   <script src="/script/db.js"></script>
   <script src="/script/request.js"></script>
   <script src="/script/standings.js"></script>
+  <script type="text/javascript">
+function setBack(region) {
+  var i, lnks, href,
+      key = window.bhv.request.utils.getKey();
+  if (key) {
+    lnks = document.querySelectorAll('div#header > a');
+    if (lnks) {
+      for (i = 0; i < lnks.length; ++i) {
+        lnks[i].setAttribute('href', lnks[i].getAttribute('href') + '#anchor_'
+          + region + '_' + key);
+      }
+    }
+  }
+}
+  </script>
  </head>
- <body onload="getStandings();">
+ <body onload="setBack('standings'); getStandings();">
+  <div id="header">
+  <a href="/ov.html" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
+  <div class="title">Tabelle</div>
+  <a href="/ov.html" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
+  </div>
   <pre id="content">Loading...</pre>
  </body>
 </html>
