back links in info

--- a/calendar/calendar.html
+++ b/calendar/calendar.html
@@ -40,13 +40,13 @@
   </script>
 
   <script id="tplHeader" type="text/x-template">
-<a href="/ov.html" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
+<a href="/ov.html#anchor_calendar" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
 <div class="nav l1" data-dir="{{dir-12}}">&lt;&lt;</div>
 <div class="nav l2" data-dir="{{dir-1}}">&lt;</div>
 <div class="title">{{month}} {{year}}</div>
 <div class="nav r2" data-dir="{{dir+1}}">&gt;</div>
 <div class="nav r1" data-dir="{{dir+12}}">&gt;&gt;</div>
-<a href="/ov.html" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
+<a href="/ov.html#anchor_calendar" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
   </script>
   <script id="tplFooter" type="text/x-template">
 Brückl Hotvolleys<div>Brückl Hotvolleys</div>
