--- a/info/wunschzettel.html
+++ b/info/wunschzettel.html
@@ -5,6 +5,9 @@
   <title>Brückl hotvolleys</title>
   <link rel="stylesheet" href="/styles.css">
   <style>
+body {
+  margin: 60px 0 0 0;
+}
 p {
   margin: 2%;
   text-align: justify;
@@ -51,12 +54,17 @@ img.logo {
   </style>
 </head>
 <body>
-<img class="ball1" src="../image/ball32.png" alt="Volleyball" />
-<div style="float: left; position: relative; margin-top: 1%;">
-<h1>Liebe Spielerin, lieber Spieler!</h1><br>
-<h2>Ein Wunschzettel</h2>
+<div id="header">
+<a href="/ov.html#anchor_wunsch" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
+<div class="title">Ein Wunschzettel</div>
+<a href="/ov.html#anchor_wunsch" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
 </div>
-<img class="logo" src="../image/logo.png" alt="Logo Brückl Hotvolleys" />
+
+<img class="ball1" src="../image/ball32.png" alt="Volleyball" />
+<div style="float: left; position: relative; margin: 5% 0 0 3%;">
+<h1>Liebe Spielerin, lieber Spieler!</h1>
+</div>
+<!--img class="logo" src="../image/logo.png" alt="Logo Brückl Hotvolleys" /-->
 <br clear="all" />
 <p>Als Volleyballtrainer ist mit der Sport natürlich ein ganz besonderes Anliegen. Aber daneben gibt es auch
 noch andere wichtige Dinge im Leben. Eines davon, und ein nicht ganz Unwichtiges, nennt sich Schule.</p>
