--- a/info/gesucht.html
+++ b/info/gesucht.html
@@ -5,12 +5,12 @@
   <title>Brückl hotvolleys</title>
   <link rel="stylesheet" href="/styles.css">
   <style>
-div {
+div.content {
   position: absolute;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
+  left: 10px;
+  top: 60px;
+  right: 10px;
+  bottom: 10px;
   background-image: url("/info/gesucht.jpeg");
   background-position: center;
   background-repeat: no-repeat;
@@ -20,6 +20,11 @@ div {
   </style>
 </head>
 <body>
-  <div>&nbsp;</div>
+  <div id="header">
+  <a href="/ov.html#anchor_wunsch" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
+  <div class="title">Gesucht!</div>
+  <a href="/ov.html#anchor_wunsch" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
+  </div>
+  <div class="content">&nbsp;</div>
 </body>
 </html>
