--- a/info/info.html
+++ b/info/info.html
@@ -5,6 +5,9 @@
   <title>Brückl hotvolleys</title>
   <link rel="stylesheet" href="/styles.css">
 <style>
+body {
+  margin: 60px 0 0 0;
+}
 table {
   width: 100%;
 }
@@ -28,6 +31,11 @@ img.bullet {
 </style>
 </head>
 <body>
+<div id="header">
+<a href="/ov.html#anchor_divinfo" style="left: 10px;"><img src="/image/logo.png" height="30px" /></a>
+<div class="title">Allgemeine Infos</div>
+<a href="/ov.html#anchor_divinfo" style="right: 10px;"><img src="/image/logo.png" height="30px" /></a>
+</div>
 
 <table cellspacing="0" cellpadding="0">
 <colgroup>
